--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,14 +8,13 @@
     android:fitsSystemWindows="true"
     tools:context="com.example.humungus.playpal.MainActivity">
 
-    <include layout="@layout/include_list_viewpager" />
+     />
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:fitsSystemWindows="true"
-        app:menu="@menu/drawer_view" />
+        android:fitsSystemWindows="true" />
 
 </android.support.v4.widget.DrawerLayout>
